tth-sdo/main/default/objects/Contact/fields/Activity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Activity_Indicator__c</fullName>
    <formula>IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) + &#39;servlet/servlet.FileDownload?file=&#39;&amp; IF  (Total_of_Activities__c &gt; 0, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) + &#39;servlet/servlet.FileDownload?file=&#39;&amp; IF  (Total_of_Activities__c &gt; 3, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) + &#39;servlet/servlet.FileDownload?file=&#39;&amp; IF  (Total_of_Activities__c &gt; 6, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) + &#39;servlet/servlet.FileDownload?file=&#39;&amp; IF  (Total_of_Activities__c &gt; 9, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22) &amp;&quot;&quot;&amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) + &#39;servlet/servlet.FileDownload?file=&#39;&amp; IF  (Total_of_Activities__c &gt; 12, &#39;0156g000001GtsR&#39;, &#39;0156g000001GtsS&#39;),&#39;&#39;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Indicator</label>
    <type>Text</type>
</CustomField>