tth-sdo/main/default/objects/Contact/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <formula>IMAGE(

&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; +  MailingStreet + &quot;,&quot;  + MailingCity + &quot;,&quot; +  MailingState + &quot;&amp;zoom=13&amp;size=650x250&amp;markers=color:red|&quot; +  MailingStreet + &quot;,&quot;  + MailingCity + &quot;,&quot; +  MailingState + &quot;&amp;sensor=false&quot;





, &quot;no map available&quot;, 250, 650)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location</label>
    <type>Text</type>
</CustomField>