tth-sdo/main/default/objects/Contact/fields/SlickSidebar_AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>SlickSidebar_AccountAddress__c</fullName>
    <formula>if(LEN(Account.BillingStreet)&gt;0, Account.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Account.BillingCity)&gt;0, Account.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account.BillingState)&gt;0, Account.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account.BillingPostalCode)&gt;0, Account.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN( Account.BillingCountry) &gt;0, Account.BillingCountry,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>