tth-sdo/main/default/objects/Contact/listViews/Pardot_Contacts.listView-meta.xml
<ListView>
    <fullName>Pardot_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>pi__score__c</columns>
    <columns>pi__grade__c</columns>
    <columns>pi__last_activity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Pardot_Contact</value>
    </filters>
    <label>Pardot Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>